# confessor

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  issue-17-get-confessions-endpoint.patch  issue-20-tags-toewijzen.patch
backend/src/: config.rs  main.rs
backend/src/business/: dedupe.rs  mod.rs  numbering.rs  settings.rs  tagging.rs  template.rs  title.rs  tombstone.rs
backend/src/model/: firestore.rs  mod.rs  sheets.rs
backend/src/model/firestore/: confessions.rs  mod.rs  settings.rs  tags.rs
backend/src/routes/: confessions.rs  mod.rs  settings.rs  sync.rs  tags.rs
frontend/: package-lock.json  package.json
frontend/src/components/: index.js
frontend/src/components/atoms/: _index.scss
frontend/src/components/atoms/Button/: Button.js  Button.mock.js  Button.stories.js  Button.test.js  _Button.style.scss  _index.scss
