[package]
name = "Confessor"
version = "0.1.0"
edition = "2024"

[dependencies]
firestore = "0.49.0"
gcp_auth = "0.12.7"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.13.4", features = ["json"] }
rustls = { version = "0.23.41", features = ["ring"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
